--- a/src/home.html
+++ b/src/home.html
@@ -745,6 +745,40 @@
         </div>
     </div>
 </div>
+
+<footer class="footer">
+    <div class="container footer__container">
+        <div class="footer__info">
+            <a href="/" class="footer__logo">
+                <img src="img/header/logo.svg" alt="">
+            </a>
+            <p class="footer__description">
+                Основная цель проекта — обеспечение потенциальных покупателей, на основе свободного доступа, информацией о наличии, цене и качестве различных видов продукции строительной отрасли, с указанием координат потенциальных поставщиков.
+            </p>
+        </div>
+        <div class="footer__nav">
+            <div class="footer__col">
+                <a href="#" class="footer__link link link-dark">О нас</a>
+                <a href="#" class="footer__link link link-dark">Услуги</a>
+                <a href="#" class="footer__link link link-dark">Реклама</a>
+                <a href="#" class="footer__link link link-dark">Контакты</a>
+                <a href="#" class="footer__link link link-dark">Справочник</a>
+            </div>
+            <div class="footer__col">
+                <a href="#" class="footer__link link link-dark">Тендеры</a>
+                <a href="#" class="footer__link link link-dark">Объявления</a>
+                <a href="#" class="footer__link link link-dark">Цены поставщиков</a>
+                <a href="#" class="footer__link link link-dark">Заявки покупателей</a>
+            </div>
+            <div class="footer__col">
+                <a href="tel:" class="footer__link link link-dark">Отдел Продаж: 8 (499) 270 58 45</a>
+                <a href="tel:" class="footer__link link link-dark">Отдел Рекламы +7 (499) 270-58-45</a>
+                <a href="mailto:" class="footer__link link link-dark">Email: info@stroim100.ru </a>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </body>
 
 </html>
