--- a/src/ui.html
+++ b/src/ui.html
@@ -105,6 +105,24 @@
         </div>
 
         <div class="form-group">
+            <p>
+                <input type="radio" id="test1" name="radio-group" checked>
+                <label for="test1">Физическое лицо</label>
+            </p>
+            <p>
+                <input type="radio" id="test2" name="radio-group">
+                <label for="test2">Юридическое лицо</label>
+            </p>
+        </div>
+
+        <div class="form-group">
+            <label>
+                <input type="checkbox" name="check-one" value="check-one" />
+                <span>Кликни меня</span>
+            </label>
+        </div>
+
+        <div class="form-group">
             <div class="form-group__row">
                 <div class="form-group__column form-group__column--2">
                     <a href="" class="banner-card">
