--- a/src/ceni-postavshikov.html
+++ b/src/ceni-postavshikov.html
@@ -71,6 +71,45 @@
                                     <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
                                         <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
                                     </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Заборы" data-qnty="82">
+                                        <a href="#" class="link link-dark sidebar__link">Заборы <span>(82)</span></a>
+                                    </li>
                                 </ul>
                                 <button class="btn btn-link sidebar__show-more">
                                     Показать все
@@ -241,6 +280,186 @@
                             <a href="#" class="link link-dark catalog-nav__item">Объявления</a>
                             <a href="#" class="link link-dark catalog-nav__item">Заявки покупателей</a>
                         </div>
+                        <div class="catalog-sort">
+                            <div class="catalog-sort__panel">
+                                <div class="catalog-sort__label">Сортировать по:</div>
+                                <a href="#" class="link link-dark catalog-sort__link down">
+                                    рейтингу
+                                    <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4.35355 0.646935C4.15829 0.451673 3.84171 0.451673 3.64645 0.646935L0.464466 3.82892C0.269204 4.02418 0.269204 4.34076 0.464466 4.53602C0.659728 4.73128 0.976311 4.73128 1.17157 4.53602L4 1.70759L6.82843 4.53602C7.02369 4.73128 7.34027 4.73128 7.53553 4.53602C7.7308 4.34076 7.7308 4.02418 7.53553 3.82892L4.35355 0.646935ZM4.5 13.0005L4.5 1.00049L3.5 1.00049L3.5 13.0005L4.5 13.0005Z"/>
+                                    </svg>
+                                </a>
+                                <a href="#" class="link catalog-sort__link">
+                                    цене
+                                    <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4.35355 0.646935C4.15829 0.451673 3.84171 0.451673 3.64645 0.646935L0.464466 3.82892C0.269204 4.02418 0.269204 4.34076 0.464466 4.53602C0.659728 4.73128 0.976311 4.73128 1.17157 4.53602L4 1.70759L6.82843 4.53602C7.02369 4.73128 7.34027 4.73128 7.53553 4.53602C7.7308 4.34076 7.7308 4.02418 7.53553 3.82892L4.35355 0.646935ZM4.5 13.0005L4.5 1.00049L3.5 1.00049L3.5 13.0005L4.5 13.0005Z"/>
+                                    </svg>
+                                </a>
+                            </div>    
+                            <div class="catalog-direction">
+                                <button class="btn btn-icon catalog-direction__btn active">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <rect x="3" y="3" width="18" height="7"/>
+                                        <rect x="3" y="14" width="18" height="7"/>
+                                    </svg> 
+                                </button>
+                                <button class="btn btn-icon catalog-direction__btn horizontal-on">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <rect x="3" y="3" width="18" height="4"/>
+                                        <rect x="3" y="10" width="18" height="4"/>
+                                        <rect x="3" y="17" width="18" height="4"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="catalog-list horizontal">
+                            <div class="catalog__table__header">
+                                <div class="catalog__table__th">Наименование</div>
+                                <div class="catalog__table__th">Размер</div>
+                                <div class="catalog__table__th">Сорт</div>
+                                <div class="catalog__table__th">Примечение</div>
+                                <div class="catalog__table__th">Цена</div>
+                                <div class="catalog__table__th">Поставщик</div>
+                            </div>
+                            <div class="catalog-item">
+                                <a href="#" class="catalog-item__image">
+                                    <img src="img/catalog-item.png" alt="">
+                                </a>
+                                <div class="catalog-item__body">
+                                    <h4 class="catalog-item__name">
+                                        <a href="#" class="link link-dark">Бетон гранит М-150 П2 F50 W2</a>
+                                    </h4>
+                                    <div class="catalog-item__option horizontal__size">
+                                        <p class="catalog-item__option__label">Размер:</p>
+                                        <p class="catalog-item__option__value">M - 150</p>
+                                    </div>
+                                    <div class="catalog-item__option horizontal__grade">
+                                        <p class="catalog-item__option__label">Сорт:</p>
+                                        <p class="catalog-item__option__value">F100 W4</p>
+                                    </div>
+                                    <div class="catalog-item__option horizontal__note">
+                                        <p class="catalog-item__option__label">Примечение:</p>
+                                        <p class="catalog-item__option__value">B - 10/12,5</p>
+                                    </div>
+                                    <div class="catalog-item__option horizontal__price">
+                                        <p class="catalog-item__option__value">20 000 руб.</p>
+                                    </div>
+                                    <div class="catalog-item__option horizontal__provider">
+                                        <p class="catalog-item__option__label">Поставщик:</p>
+                                        <p class="catalog-item__option__value">
+                                            <a href="#" class="link catalog-item__option__link"> Strotel.ru</a>
+                                            <img src="img/star.svg" alt="">
+                                            <img src="img/star.svg" alt="">
+                                            <img src="img/star.svg" alt="">
+                                        </p>
+                                    </div>
+                                    <div class="catalog-item__description">
+                                        Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве.
+                                        Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве.
+                                    </div>
+                                    <div class="catalog-item__option">
+                                        <p class="catalog-item__option__label">Опубликовано</p>
+                                        <p class="catalog-item__option__value">24.05.2021</p>
+                                    </div>
+                                </div>
+                                <div class="catalog-item__action">
+                                    <div class="catalog-item__phone">
+                                        <p class="catalog-item__phone__label">+ 7  Показать номер</p>
+                                        <p class="catalog-item__phone__number">+ 7 (912) 657 67 67</p>
+                                    </div>
+                                    <p class="catalog-item__city">Москва</p>
+                                    <p class="catalog-item__price">4 000 руб.</p>
+                                    <div>
+                                        <button class="btn btn-primary">В корзину</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="catalog-item">
+                                <a href="#" class="catalog-item__image">
+                                    <img src="img/catalog-item.png" alt="">
+                                </a>
+                                <div class="catalog-item__body">
+                                    <h4 class="catalog-item__name">
+                                        <a href="#" class="link link-dark">Бетон гранит М-150 П2 F50 W2</a>
+                                    </h4>
+                                    <div class="catalog-item__option">
+                                        <p class="catalog-item__option__label">Размер:</p>
+                                        <p class="catalog-item__option__value">M - 150</p>
+                                    </div>
+                                    <div class="catalog-item__option">
+                                        <p class="catalog-item__option__label">Сорт:</p>
+                                        <p class="catalog-item__option__value">F100 W4</p>
+                                    </div>
+                                    <div class="catalog-item__option">
+                                        <p class="catalog-item__option__label">Примечение:</p>
+                                        <p class="catalog-item__option__value">B - 10/12,5</p>
+                                    </div>
+                                    <div class="catalog-item__option">
+                                        <p class="catalog-item__option__label">Поставщик:</p>
+                                        <p class="catalog-item__option__value">
+                                            <a href="#" class="link catalog-item__option__link"> Strotel.ru</a>
+                                            <img src="img/star.svg" alt="">
+                                            <img src="img/star.svg" alt="">
+                                            <img src="img/star.svg" alt="">
+                                        </p>
+                                    </div>
+                                    <div class="catalog-item__description">
+                                        Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве.
+                                        Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили распространение в капитальном строительстве.
+                                    </div>
+                                    <div class="catalog-item__option">
+                                        <p class="catalog-item__option__label">Опубликовано</p>
+                                        <p class="catalog-item__option__value">24.05.2021</p>
+                                    </div>
+                                </div>
+                                <div class="catalog-item__action">
+                                    <div class="catalog-item__phone">
+                                        <p class="catalog-item__phone__label">+ 7  Показать номер</p>
+                                        <p class="catalog-item__phone__number">+ 7 (912) 657 67 67</p>
+                                    </div>
+                                    <p class="catalog-item__city">Москва</p>
+                                    <p class="catalog-item__price">4 000 руб.</p>
+                                    <div>
+                                        <button class="btn btn-primary">В корзину</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <ul class="pagination">
+                            <li class="pagination-item">
+                                <a class="link pagination-link active" href="#">1</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">2</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">3</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">4</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">5</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">6</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">7</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">8</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">9</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link" href="#">10</a>
+                            </li>
+                            <li class="pagination-item">
+                                <a class="link pagination-link pagination-link-next" href="#">Вперёд</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
