filter and fixes

--- a/src/customers-requests.html
+++ b/src/customers-requests.html
@@ -283,7 +283,7 @@
                     <div class="sidebar">
                        <div class="sidebar__item">
                            <!--  -->
-                            <button class="btn sidebar__item__collapse-btn" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-collapse-1" aria-expanded="false" aria-controls="#sidebar-collapse-1">
+                            <button class="btn sidebar__item__collapse-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-collapse-1" aria-expanded="false" aria-controls="#sidebar-collapse-1">
                                 ЖБИ
                             </button>
                             <div class="collapse" id="sidebar-collapse-1">
