--- a/src/home.html
+++ b/src/home.html
@@ -31,102 +31,104 @@
         </a>
         <div class="header__right">
             <div class="header__dropdown header__dropdown--catalog dropdown">
-                <a class="btn btn-primary header__btn-dropdown" href="#" role="button" id="dropdownMenuLink"
-                   data-bs-toggle="dropdown" aria-expanded="false" data-bs-offset="0,59" data-bs-auto-close="false">
+                <a class="btn btn-primary header__btn-dropdown" href="#" role="button" id="catalog-dropdown"
+                   data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="false" data-bs-display="static">
                     <button class="burger"></button>
                     <span>Каталог</span>
                 </a>
-                <ul class="header__dropdown-menu dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <div class="header__dropdown-menu-inner d-flex align-items-start">
-                        <div class="header__navs nav flex-column nav-pills" id="v-pills-tab" role="tablist"
-                             aria-orientation="vertical">
-                            <button class="active header__nav" id="v-1-tab" data-bs-toggle="pill" data-bs-target="#v-1"
-                                    type="button" role="tab" aria-controls="v-1" aria-selected="true">
-                                ЖБИ
-                            </button>
-                            <button class=" header__nav" id="v-2-tab" data-bs-toggle="pill" data-bs-target="#v-2"
-                                    type="button" role="tab" aria-controls="v-2" aria-selected="false">
-                                Фитинг для труб
-                            </button>
-                            <button class="header__nav" id="v-3-tab" data-bs-toggle="pill" data-bs-target="#v-3"
-                                    type="button" role="tab" aria-controls="v-3" aria-selected="false">
-                                Кирпич
-                            </button>
-                            <button class="header__nav" id="v-4-tab" data-bs-toggle="pill" data-bs-target="#v-4"
-                                    type="button" role="tab" aria-controls="v-4" aria-selected="false">
-                                Песок
-                            </button>
-                            <button class="header__nav" id="v-5-tab" data-bs-toggle="pill" data-bs-target="#v-5"
-                                    type="button" role="tab" aria-controls="v-5" aria-selected="true">
-                                ЖБИ
-                            </button>
-                            <button class=" header__nav" id="v-6-tab" data-bs-toggle="pill" data-bs-target="#v-6"
-                                    type="button" role="tab" aria-controls="v-6" aria-selected="false">
-                                Фитинг для труб
-                            </button>
-                            <button class="header__nav" id="v-7-tab" data-bs-toggle="pill" data-bs-target="#v-7"
-                                    type="button" role="tab" aria-controls="v-7" aria-selected="false">
-                                Кирпич
-                            </button>
-                            <button class="header__nav" id="v-8-tab" data-bs-toggle="pill" data-bs-target="#v-8"
-                                    type="button" role="tab" aria-controls="v-8" aria-selected="false">
-                                Песок
-                            </button>
-                            <button class="header__nav" id="v-9-tab" data-bs-toggle="pill" data-bs-target="#v-9"
-                                    type="button" role="tab" aria-controls="v-9" aria-selected="true">
-                                ЖБИ
-                            </button>
-                            <button class=" header__nav" id="v-10-tab" data-bs-toggle="pill" data-bs-target="#v-10"
-                                    type="button" role="tab" aria-controls="v-10" aria-selected="false">
-                                Фитинг для труб
-                            </button>
-                            <button class="header__nav" id="v-11-tab" data-bs-toggle="pill" data-bs-target="#v-11"
-                                    type="button" role="tab" aria-controls="v-11" aria-selected="false">
-                                Кирпич
-                            </button>
-                            <button class="header__nav" id="v-12-tab" data-bs-toggle="pill" data-bs-target="#v-12"
-                                    type="button" role="tab" aria-controls="v-12" aria-selected="false">
-                                Песок
-                            </button>
-                            <button class="header__nav" id="v-13-tab" data-bs-toggle="pill" data-bs-target="#v-13"
-                                    type="button" role="tab" aria-controls="v-13" aria-selected="true">
-                                ЖБИ
-                            </button>
-                            <button class=" header__nav" id="v-14-tab" data-bs-toggle="pill" data-bs-target="#v-14"
-                                    type="button" role="tab" aria-controls="v-14" aria-selected="false">
-                                Фитинг для труб
-                            </button>
-                        </div>
-                        <div class="header__tab-content" id="v-pills-tabContent">
-                            <div class="header__tab-pane fade show active" id="v-1" role="tabpanel"
-                                 aria-labelledby="v-1-tab">
-                                <div class="header__nav-links">
-                                    <a href="" class="header__nav-link link link-dark">Ограждения</a>
-                                    <a href="" class="header__nav-link link link-dark">Плиты</a>
-                                    <a href="" class="header__nav-link link link-dark">Кабельные каналы</a>
-                                    <a href="" class="header__nav-link link link-dark">Блок</a>
-                                    <a href="" class="header__nav-link link link-dark">Бортовой камень</a>
-                                    <a href="" class="header__nav-link link link-dark">Бордюрный камень</a>
-                                    <a href="" class="header__nav-link link link-dark">Заборы</a>
-                                    <a href="" class="header__nav-link link link-dark">Ограждения</a>
-                                    <a href="" class="header__nav-link link link-dark">Плиты</a>
-                                    <a href="" class="header__nav-link link link-dark">Кабельные каналы</a>
-                                    <a href="" class="header__nav-link link link-dark">Блок</a>
-                                    <a href="" class="header__nav-link link link-dark">Бордюрный камень</a>
-                                    <a href="" class="header__nav-link link link-dark">Заборы</a>
-                                    <a href="" class="header__nav-link link link-dark">Ограждения</a>
-                                    <a href="" class="header__nav-link link link-dark">Плиты</a>
-                                    <a href="" class="header__nav-link link link-dark">Кабельные каналы</a>
-                                    <a href="" class="header__nav-link link link-dark">Блок</a>
+                <div class="header__dropdown-menu dropdown-menu" aria-labelledby="catalog-dropdown">
+                    <div class="container ">
+                        <div class="header__dropdown-menu-inner d-flex align-items-start">
+                            <div class="header__navs nav flex-column nav-pills" id="v-pills-tab" role="tablist"
+                                aria-orientation="vertical">
+                                <button class="active header__nav" id="v-1-tab" data-bs-toggle="pill" data-bs-target="#v-1"
+                                        type="button" role="tab" aria-controls="v-1" aria-selected="true">
+                                    ЖБИ
+                                </button>
+                                <button class=" header__nav" id="v-2-tab" data-bs-toggle="pill" data-bs-target="#v-2"
+                                        type="button" role="tab" aria-controls="v-2" aria-selected="false">
+                                    Фитинг для труб
+                                </button>
+                                <button class="header__nav" id="v-3-tab" data-bs-toggle="pill" data-bs-target="#v-3"
+                                        type="button" role="tab" aria-controls="v-3" aria-selected="false">
+                                    Кирпич
+                                </button>
+                                <button class="header__nav" id="v-4-tab" data-bs-toggle="pill" data-bs-target="#v-4"
+                                        type="button" role="tab" aria-controls="v-4" aria-selected="false">
+                                    Песок
+                                </button>
+                                <button class="header__nav" id="v-5-tab" data-bs-toggle="pill" data-bs-target="#v-5"
+                                        type="button" role="tab" aria-controls="v-5" aria-selected="true">
+                                    ЖБИ
+                                </button>
+                                <button class=" header__nav" id="v-6-tab" data-bs-toggle="pill" data-bs-target="#v-6"
+                                        type="button" role="tab" aria-controls="v-6" aria-selected="false">
+                                    Фитинг для труб
+                                </button>
+                                <button class="header__nav" id="v-7-tab" data-bs-toggle="pill" data-bs-target="#v-7"
+                                        type="button" role="tab" aria-controls="v-7" aria-selected="false">
+                                    Кирпич
+                                </button>
+                                <button class="header__nav" id="v-8-tab" data-bs-toggle="pill" data-bs-target="#v-8"
+                                        type="button" role="tab" aria-controls="v-8" aria-selected="false">
+                                    Песок
+                                </button>
+                                <button class="header__nav" id="v-9-tab" data-bs-toggle="pill" data-bs-target="#v-9"
+                                        type="button" role="tab" aria-controls="v-9" aria-selected="true">
+                                    ЖБИ
+                                </button>
+                                <button class=" header__nav" id="v-10-tab" data-bs-toggle="pill" data-bs-target="#v-10"
+                                        type="button" role="tab" aria-controls="v-10" aria-selected="false">
+                                    Фитинг для труб
+                                </button>
+                                <button class="header__nav" id="v-11-tab" data-bs-toggle="pill" data-bs-target="#v-11"
+                                        type="button" role="tab" aria-controls="v-11" aria-selected="false">
+                                    Кирпич
+                                </button>
+                                <button class="header__nav" id="v-12-tab" data-bs-toggle="pill" data-bs-target="#v-12"
+                                        type="button" role="tab" aria-controls="v-12" aria-selected="false">
+                                    Песок
+                                </button>
+                                <button class="header__nav" id="v-13-tab" data-bs-toggle="pill" data-bs-target="#v-13"
+                                        type="button" role="tab" aria-controls="v-13" aria-selected="true">
+                                    ЖБИ
+                                </button>
+                                <button class=" header__nav" id="v-14-tab" data-bs-toggle="pill" data-bs-target="#v-14"
+                                        type="button" role="tab" aria-controls="v-14" aria-selected="false">
+                                    Фитинг для труб
+                                </button>
+                            </div>
+                            <div class="header__tab-content" id="v-pills-tabContent">
+                                <div class="header__tab-pane fade show active" id="v-1" role="tabpanel"
+                                    aria-labelledby="v-1-tab">
+                                    <div class="header__nav-links">
+                                        <a href="" class="header__nav-link link link-dark">Ограждения</a>
+                                        <a href="" class="header__nav-link link link-dark">Плиты</a>
+                                        <a href="" class="header__nav-link link link-dark">Кабельные каналы</a>
+                                        <a href="" class="header__nav-link link link-dark">Блок</a>
+                                        <a href="" class="header__nav-link link link-dark">Бортовой камень</a>
+                                        <a href="" class="header__nav-link link link-dark">Бордюрный камень</a>
+                                        <a href="" class="header__nav-link link link-dark">Заборы</a>
+                                        <a href="" class="header__nav-link link link-dark">Ограждения</a>
+                                        <a href="" class="header__nav-link link link-dark">Плиты</a>
+                                        <a href="" class="header__nav-link link link-dark">Кабельные каналы</a>
+                                        <a href="" class="header__nav-link link link-dark">Блок</a>
+                                        <a href="" class="header__nav-link link link-dark">Бордюрный камень</a>
+                                        <a href="" class="header__nav-link link link-dark">Заборы</a>
+                                        <a href="" class="header__nav-link link link-dark">Ограждения</a>
+                                        <a href="" class="header__nav-link link link-dark">Плиты</a>
+                                        <a href="" class="header__nav-link link link-dark">Кабельные каналы</a>
+                                        <a href="" class="header__nav-link link link-dark">Блок</a>
+                                    </div>
                                 </div>
+                                <div class="header__tab-pane fade" id="v-2" role="tabpanel" aria-labelledby="v-2-tab">2
+                                </div>
+                                <div class="header__tab-pane fade" id="v-3" role="tabpanel" aria-labelledby="v-3">3</div>
+                                <div class="header__tab-pane fade" id="v-4" role="tabpanel" aria-labelledby="v-4">4</div>
                             </div>
-                            <div class="header__tab-pane fade" id="v-2" role="tabpanel" aria-labelledby="v-2-tab">2
-                            </div>
-                            <div class="header__tab-pane fade" id="v-3" role="tabpanel" aria-labelledby="v-3">3</div>
-                            <div class="header__tab-pane fade" id="v-4" role="tabpanel" aria-labelledby="v-4">4</div>
                         </div>
-                    </div>
-                </ul>
+                    </div>    
+                </div>
             </div>
             <form class="header__search">
                 <div class="header__search-decorator"></div>
@@ -138,10 +140,20 @@
                         <option value="4">Тендеры</option>
                     </select>
                 </label>
-                <input type="text" class="form-control header__search-input base-input" placeholder="Поиск продукции">
+                <input type="text" id="header-search-input" class="form-control header__search-input base-input" placeholder="Поиск продукции">
                 <button type="submit" class="btn btn-primary header__btn-search">
                     <img src="img/header/loop.svg" alt="">
                 </button>
+                <ul class="header__search-result">
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                    <li><a href="#" class="header__search-link">Бетонные блоки</a></li>
+                </ul>
             </form>
             <div class="header__dropdown header__dropdown--add dropdown">
                 <a href="#" class="header__btn-add link link-dark" type="button" id="dropdownMenuAdd"
@@ -269,7 +281,9 @@
 <div class="home content">
 
     <section class="banner" style="text-align: center">
-        <img src="img/home-banner.jpg" alt="баннер">
+        <div class="container">
+            <img src="img/home-banner.jpg" alt="баннер">
+        </div>    
     </section>
 
     <section class="capabilities">
@@ -277,7 +291,7 @@
             <div class="capabilities__container">
                 <div class="capabilities__item">
                     <div class="capabilities__icon">
-                        <img src="img/capabilities/icon-1.svg" alt="">
+                        <img src="img/capabilities/e-shop-Icon.svg" alt="" style="width: 58px">
                     </div>
                     <p class="capabilities__text">
                         Создайте страницу компании на портале
