--- a/src/ceni-postavshikov-horizontal.html
+++ b/src/ceni-postavshikov-horizontal.html
@@ -549,13 +549,13 @@
                                 </a>
                             </div>    
                             <div class="catalog-direction">
-                                <a href="#" class="btn btn-icon catalog-direction__btn active">
+                                <a herf="#" class="btn btn-icon catalog-direction__btn ">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <rect x="3" y="3" width="18" height="7"/>
                                         <rect x="3" y="14" width="18" height="7"/>
                                     </svg> 
                                 </a>
-                                <a href="#" class="btn btn-icon catalog-direction__btn">
+                                <a class="btn btn-icon catalog-direction__btn active">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <rect x="3" y="3" width="18" height="4"/>
                                         <rect x="3" y="10" width="18" height="4"/>
@@ -564,7 +564,15 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="catalog-list">
+                        <div class="catalog-list horizontal">
+                            <div class="catalog__table__header">
+                                <div class="catalog__table__th">Наименование</div>
+                                <div class="catalog__table__th">Размер</div>
+                                <div class="catalog__table__th">Сорт</div>
+                                <div class="catalog__table__th">Примечение</div>
+                                <div class="catalog__table__th">Цена</div>
+                                <div class="catalog__table__th">Поставщик</div>
+                            </div>
                             <div class="catalog-item">
                                 <a href="#" class="catalog-item__image">
                                     <img src="img/catalog-item.png" alt="">
