--- a/src/customers-requests.html
+++ b/src/customers-requests.html
@@ -361,9 +361,9 @@
                             <div class="tender-card">
                                 <div class="tender-card__head">
                                     <div class="tender-card__info">
-                                        <p class="tender-card__number">
+                                        <a href="#" class="link link-dark tender-card__number">
                                             Тендер № 279
-                                        </p>
+                                        </a>
                                         <p class="tender-card__period">
                                             Период торгов: с
                                             <span class="tender-card__accent">10:40 30 октября 2019 г.</span> по
@@ -483,9 +483,9 @@
                             <div class="tender-card">
                                 <div class="tender-card__head">
                                     <div class="tender-card__info">
-                                        <p class="tender-card__number">
+                                        <a href="#" class="link link-dark tender-card__number">
                                             Тендер № 279
-                                        </p>
+                                        </a>
                                         <p class="tender-card__period">
                                             Период торгов: с
                                             <span class="tender-card__accent">10:40 30 октября 2019 г.</span> по
