модалка выбора города + страницы восттановления пароля

--- a/src/ui.html
+++ b/src/ui.html
@@ -35,7 +35,7 @@
 </head>
 
 
-<body>
+<body class="page">
     <div class="ui">
         <h2>Заголовки</h2>
         <h2 class="h1">Каталог продукции на нашем портале включает в себя:</h2>
