--- a/src/advertisement.html
+++ b/src/advertisement.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="page">
 <header class="header">
     <div class="header__top container">
         <div class="header__location">
