--- a/src/tender-list.html
+++ b/src/tender-list.html
@@ -8,7 +8,7 @@
     <title>Тендеры</title>
 </head>
 
-<body>
+<body class="page">
 <header class="header">
     <div class="header__top container">
         <div class="header__location">
