--- a/src/password-recovery-1.html
+++ b/src/password-recovery-1.html
@@ -8,7 +8,7 @@
     <title>Восстановление пароля</title>
 </head>
 
-<body class="page">
+<body class="page transition-off">
 <header class="header">
     <div class="header__top container">
         <a hre="#" class="header__location link link-dark" data-bs-toggle="modal" data-bs-target="#regionChooseModal">
